[package]
name = "imager-video"
version = "0.1.0"
authors = ["colbyn <hello@colbyn.com>"]
edition = "2021"
publish = false

[dependencies]
libc = "^0.2"
image = "0.24.5"
imageproc = "0.23.0"
itertools = "0.10.5"
lazy_static = "1.4.0"
x264-dev = "0.2.0"
vmaf-sys = "0.0.10"
webp-dev = "0.4.1"
ffmpeg-dev = "0.3.8"
rayon = "1.2.1"
either = {version = "^1", features = ["serde"]}
serde = {version = "^1.0", features = ["derive"]}
serde_json = "^1.0"
colourado = "0.2.0"