[package]
name = "imager"
version = "0.3.3"
authors = ["colbyn <hello@colbyn.com>"]
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/imager-io/imager"
homepage = "https://imager.io"
description = "Automated image compression; optimizes the compression using various heuristics."
keywords = ["image", "optimization", "compression"]
exclude = ["assets"]
readme = "README.md"

[dependencies]
libc = "^0.2"
mozjpeg-sys = "1.0.3"
vmaf-sys = {version = "0.0.10"}
colourado = "0.2.0"
glob = "^0.3"
structopt = "0.3.5"
rand = "0.8.5"
rayon = "1.1.0"
either = {version = "^1", features = ["serde"]}
serde = {version = "^1.0", features = ["derive"]}
serde_json = "^1.0"
lazy_static = "1.4.0"
itertools = "0.10.5"
exoquant = "0.2.0"
lodepng = "3.7.2"
image = "0.24.5"
imageproc = "0.23.0"
png = "0.17.7"
rgb2yuv420 = "0.2.3"
webp-dev = "0.4.1"
indicatif = "0.17.2"

[features]
default = []
buildtype-docs-only = []

[package.metadata.docs.rs]
# no-default-features = true
features = ["buildtype-docs-only"]

[target.'cfg(not(target_os = "windows"))'.dependencies]
jemallocator = "0.5.0"

[profile.dev]
opt-level = 3
lto = true
